api-gateway/k8s/depl_svc.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-gateway-depl
  namespace: test
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-gateway
  template:
    metadata:
      labels:
        app: api-gateway
    spec: 
      containers:
      - name: api-gateway-container
        # 추후 수정 필요
        image: 346903264902.dkr.ecr.ap-northeast-2.amazonaws.com/test/api-gateway:latest
        ports: 
        - containerPort: 8080
        resources:
        # 컨테이너가 사용할 수 있는 리소스의 최대치
          limits:
            cpu: "1"
            memory: "500Mi"
          # 컨테이너가 시작될 때 보장받아야 하는 최소 자원
          requests:
            cpu: "0.5"
            memory: "250Mi"
        # 컨테이너 상태 확인을 통해 롤링업데이트 최적화 
        readinessProbe:
          httpGet:
            # healthcheck 경로
            path: /health
            port: 8080
          # 컨테이너 시작 후 지연
          initialDelaySeconds: 10
          # 확인 반복 주기
          periodSeconds: 10

---
apiVersion: v1
kind: Service
metadata:
  name: api-gateway-service
  namespace: test
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: api-gateway
